--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 document.pdf
-document.log
-document.aux
-document.synctex.gz
-document.tex
+Projet/sujet.pdf
+Projet/criteres_notation.md
+Projet/README.md
+Projet/dune-projet
+
